--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <title>Pilot Anxiety</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+    <link rel="stylesheet" href="lib/jquery.mobile-1.3.2.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="lib/jquery-2.0.3.min"></script>
-    <script src="lib/jquery.mobile-1.3.2.min"></script>
+    <script src="lib/jquery-2.0.3.min.js"></script>
+    <script src="lib/jquery.mobile-1.3.2.min.js"></script>
 
 </head>
 
