--- a/sections/section_1.2.html
+++ b/sections/section_1.2.html
@@ -95,7 +95,8 @@
                             exercise_2["thought_"+i] = "";
                         }
                     }
-                    localStorage.setItem('exercise_2', JSON.stringify(exercise_2));                        
+                    localStorage.setItem('exercise_2', JSON.stringify(exercise_2));
+                    alert("secton one done!");                
                 }
             </script>
 
