--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
                 <h3>Section One</h3>
-                <a href="sections/section_1.html">Introduction</a>
+                <a href="sections/section_1.html" data-transition="none">Introduction</a>
                 <br>
                 <br>
                 <a href="sections/section_1.1.html">Defining Shyness and Social Anxiety</a>
