--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@
 
 <body>
 
-    <div class="container">
-        <div data-role="page" data-position="fixed">
+        <div data-role="page" data-position="fixed" data-theme="a">
 
-            <div data-role="header">
-                <h1>Home </h1>
-            </div>
-            <!-- /header -->
 
-            <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                <h3>Section One</h3>
-                <a href="sections/section_1.html">Introduction</a>
-                <br>
-                <br>
-                <a href="sections/section_1.1.html">Defining Shyness and Social Anxiety</a>
-                <br>
-                <br>
-                <a href="sections/section_1.2.html">Defusing from Your Anxious Thoughts</a>
-            </div>
+                <div data-role="header">
+                    <h1>Home </h1>
+                </div>
+                <!-- /header -->
 
-            <script> 
-                function clear_Storage() {
-                    localStorage.clear();
-                    alert("Storage cleared");
-                }
-            </script>
-            <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
+                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                    <h3>Section One</h3>
+                    <a href="sections/section_1.html">Introduction</a>
+                    <br>
+                    <br>
+                    <a href="sections/section_1.1.html">Defining Shyness and Social Anxiety</a>
+                    <br>
+                    <br>
+                    <a href="sections/section_1.2.html">Defusing from Your Anxious Thoughts</a>
+                </div>
+
+                <script> 
+                    function clear_Storage() {
+                        localStorage.clear();
+                        alert("Storage cleared");
+                    }
+                </script>
+                <a href="#" onclick="clear_Storage();" data-role="button">Clear Storage</a>
 
 
         </div>
         <!-- /page -->
-    </div>
+
 
 </body>
 
