--- a/sections/section_1.1.html
+++ b/sections/section_1.1.html
@@ -35,8 +35,8 @@
                 <br>
                 <h4><li>Performing in Front of Others</li></h4> (e.g. speaking up in a class discussion, or giving a presentation; being interviewed for a job)
             </p>
-                <h3>Top 3 Feared Social Situations</h3>
-                <form name="exercise_1">
+                <center><h3>Top 3 Feared Social Situations</h3></center>
+                <form name="exercise_1" id="exercise_1">
                     <div data-role='fieldcontain' >
                         <input type='text' name='fear_1' placeholder='1.'/>
                         <input type='text' name='fear_2' placeholder='2.'/>
