--- a/sections/section_2.html
+++ b/sections/section_2.html
@@ -26,12 +26,9 @@
             <p>
                 We are all familiar with basic types of anxious thinking, such as:
             </p>
-                <li>worrying (I won't fit in)</li>
-                <br>
-                <li>having anxious memories (It's just like that awful speech I gave in seventh grade)</li>
-                <br>
+                <li>worrying (I won't fit in),</li>
+                <li>having anxious memories (It's just like that awful speech I gave in seventh grade),</li>
                 <li>evaluating or judging (This isn't going very well, You look like an idiot), and </li>
-                <br>
                 <li>making negative comparisons (He's way more interesting than I am). </li>
             <p>
                 Other, slightly more elaborate types of thinking the socially anxious mind favors include the following.
@@ -41,17 +38,16 @@
             <p>
                 When your mind predicts what will happen, usually something negative
             </p>
-            <li> 
+            <p> 
                 <b>EXAMPLE:</b> I won't have anything to say, I'll have a panic attack and won't be able to speak, and My coworkers will discover that I'm incompetent. 
-            </li>
+            </p>
             <h3>Mind Reading: </h3>
             <p> 
                 When your mind tells you what others are thinking about you, usually in the form of judgmental thoughts. 
             </p> 
-            <li> 
+            <p>
                 <b>EXAMPLE:</b> thoughts starting with He thinks..., She thinks..., or They think.. (for example, She must think I'm a nervous wreck or They think I'm stupid and boring).
-            </li>
-            
+            </p>
 
             <h3>"Shoulding": </h3>
             <p>
@@ -61,16 +57,36 @@
                 <fieldset data-role="controlgroup">
                     <input type="checkbox" name="checkbox-1" id="checkbox-1"/>
                     <label for="checkbox-1">I shouldn't appear anxious.</label>
+                    <input type="checkbox" name="checkbox-2" id="checkbox-2"/>
+                    <label for="checkbox-2">I should be perfect.</label>
+                    <input type="checkbox" name="checkbox-3" id="checkbox-3"/>
+                    <label for="checkbox-3">I shouldn't inconvenience others.</label>
+                    <input type="checkbox" name="checkbox-4" id="checkbox-4"/>
+                    <label for="checkbox-4">I should always be in control. </label>
+                    <input type="checkbox" name="checkbox-5" id="checkbox-5"/>
+                    <label for="checkbox-5">I should always be funny and charming.</label>
                 </fieldset>
             </div>
+            <h3>Postmortem: </h3> 
+            <p>
+                When your mind rehashes or ruminates about what you think happened (or should have happened) in a social situation.The following is an example of a “postmortem” review that Jack engaged in after he gave a presentation at school:
+            </p>
+            <p>
+                <b>EXAMPLE:</b> <i>Oh no, I really screwed up that presentation. I should have prepared more. I can't believe I made that stupid comment about finances. And I forgot to mention the plan I've been preparing. What an idiot! The prof sure had a disappointed look on her face. I bet she dislikes having me in her class. I'm definitely going to fail!</i>
+            </p>
+            <h3>The Spotlight Effect: </h3> 
+            <p>
+                To always feel as if you are the center of attention, as if a spotlight were shining on you for everyone to see (and judge you). 
+            </p>
+            <h3>Generating Stories:</h3> 
+            <p>
+                Generating Stories: generating stories specifically about who you are in social situations, sometimes pretty negative stories (for example, a story about you as a loser).
+            </p> 
 
-            <li> I shouldn't appear anxious.</li> 
-            <li> I should be perfect.</li> 
-            <li> I shouldn't inconvenience others. </li> 
-            <li> I should always be in control. </li>
-            <li> I should always be funny and charming. </li>
-            <li> I should/shouldn't (fill in others that apply to you): </li>
-            
+
+
+
+
         </div>
         <!-- /content -->
 
