--- a/sections/section_1.2.html
+++ b/sections/section_1.2.html
@@ -32,11 +32,15 @@
                 List some of the thoughts that typically show up in each of your top three feared social situations (from <b>Exercise 1</b>).
             </p>
 
-            <form name="exercise_2">
+            <form name="exercise_2" id='exercise_2'>
                 <table border="0">
+                    <label for="exercise_2">&nbsp;
+                        <b>Feared Social Situation</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>Anxious Thoughts</b>
+                    </label>
                     <tr>
                         <td>
-                            <input type='text' name='fear_1' placeholder='1.'/>
+                            <input type='text' name='fear_1' id='fear_1' placeholder='1.'/>
                         </td>
                         <td>
                             <input type='text' name='thought_1'/>
