--- a/sections/section_1.2.html
+++ b/sections/section_1.2.html
@@ -34,7 +34,7 @@
 
             <form name="exercise_2" id='exercise_2'>
                 <table border="0">
-                    <label for="exercise_2"><center><b>Feared Social Situation</b>&nbsp;&nbsp;<b>Anxious Thoughts</b></center>
+                    <label for="exercise_2"><center><b>Feared Situation</b>&nbsp;&nbsp;<b>Anxious Thoughts</b></center>
                     </label>
                     <tr>
                         <td>
