--- a/sections/section_2.html
+++ b/sections/section_2.html
@@ -69,7 +69,7 @@
             </div>
             <h3>Postmortem: </h3> 
             <p>
-                When your mind rehashes or ruminates about what you think happened (or should have happened) in a social situation.The following is an example of a “postmortem” review that Jack engaged in after he gave a presentation at school:
+                When your mind rehashes or ruminates about what you think happened (or should have happened) in a social situation.The following is an example of a "postmortem" review that Jack engaged in after he gave a presentation at school:
             </p>
             <p>
                 <b>EXAMPLE:</b> <i>Oh no, I really screwed up that presentation. I should have prepared more. I can't believe I made that stupid comment about finances. And I forgot to mention the plan I've been preparing. What an idiot! The prof sure had a disappointed look on her face. I bet she dislikes having me in her class. I'm definitely going to fail!</i>
@@ -83,9 +83,62 @@
                 Generating Stories: generating stories specifically about who you are in social situations, sometimes pretty negative stories (for example, a story about you as a loser).
             </p> 
 
+            <h2>Exercise 3: Generating Stories</h2>
+            <p>
+                To try to get at some of your stories, complete the following phrases:.
+            </p>
+            <label for="story_1"><b>In social situations I feel as if I am (for example, an imposter)</b> </label>
+            <input type="text" name="name" id="story_1" value=""  />
+            <label for="story_2"><b>In social situations I am someone who always (for example, says the wrong thing)</b> </label>
+            <input type="text" name="name" id="story_2" value=""  />
+            <label for="story_3"><b>In social situations I am someone who can't (for example, do small talk)</b> </label>
+            <input type="text" name="name" id="story_3" value=""  />
+            <label for="story_4"><b>In social situations my best attribute is (for example, being the listener)</b> </label>
+            <input type="text" name="name" id="story_4" value=""  />
+            <label for="story_5"><b>In social situations my worst attribute is (for example, being the listener)</b> </label>
+            <input type="text" name="name" id="story_5" value=""  />
+            <label for="story_6"><b>Record any other stories your mind generates:</b> </label>
+            <input type="text" name="name" id="story_6" value=""  />
 
+            <h2>Exercise 4: Types of Anxious Thinking</h2>
+            <p>
+                Now that we have covered the most common types of anxious thinking, look at your "Feared Social Situations" and "Anxious Thoughts" (from <b>Exercise 1</b> and <b>2</b>) and, in the "Types of Anxious Thinking" column, fill in as many types of thinking as you can identify for each of the anxious thoughts you recorded. 
+                See if you notice any trends. Does your mind tend to use the same type of thinking over and over, or does it prefer variety?
+            </p>
 
-
+            <form name="exercise_2" id='exercise_2'>
+                <table border="0">
+                    <label for="exercise_2"><center><b>Feared Situation</b>&nbsp;&nbsp;<b>Anxious Thoughts</b></center>
+                    </label>
+                    <tr>
+                        <td>
+                            <input type='text' name='fear_1' id='fear_1' placeholder='1.'/>
+                        </td>
+                        <td>
+                            <input type='text' name='thought_1'/>
+                        </td>
+                        <td>
+                            <input type='text' name='story_1'/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type='text' name='fear_2' placeholder='2.'/>
+                        </td>
+                        <td>
+                            <input type='text' name='thought_2'/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type='text' name='fear_3' placeholder='3.'/>
+                        </td>
+                        <td>
+                            <input type='text' name='thought_3'/>
+                        </td>
+                    </tr>
+                </table>
+            </form>
 
         </div>
         <!-- /content -->
