--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <br>
                     <a href="sections/section_1.2.html">Defusing from Your Anxious Thoughts</a>
                 </div>
+                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                    <h3>Section Two</h3>
+                    <a href="sections/section_2.html">Types of Anxious Thinking</a>
+                </div>
 
                 <script> 
                     function clear_Storage() {
