--- a/sections/section_2.html
+++ b/sections/section_2.html
@@ -26,10 +26,12 @@
             <p>
                 We are all familiar with basic types of anxious thinking, such as:
             </p>
-                <li>worrying (I won't fit in),</li>
-                <li>having anxious memories (It's just like that awful speech I gave in seventh grade),</li>
-                <li>evaluating or judging (This isn't going very well, You look like an idiot), and </li>
-                <li>making negative comparisons (He's way more interesting than I am). </li>
+            
+                <li><p>worrying (I won't fit in),</p></li>
+                <li><p>having anxious memories (It's just like that awful speech I gave in seventh grade),</p></li>
+                <li><p>evaluating or judging (This isn't going very well, You look like an idiot), and </p></li>
+                <li><p>making negative comparisons (He's way more interesting than I am). </p></li>
+
             <p>
                 Other, slightly more elaborate types of thinking the socially anxious mind favors include the following.
                 
@@ -108,8 +110,17 @@
 
             <form name="exercise_2" id='exercise_2'>
                 <table border="0">
-                    <label for="exercise_2"><center><b>Feared Situation</b>&nbsp;&nbsp;<b>Anxious Thoughts</b></center>
-                    </label>
+                    <tr>
+                        <td>
+                            <center><b>Feared Situation</b></center>
+                        </td>
+                        <td>
+                            <center><b>Anxious Thoughts</b></center>
+                        </td>
+                        <td>
+                            <center><b>Type</b></center>
+                        </td>
+                    </tr>
                     <tr>
                         <td>
                             <input type='text' name='fear_1' id='fear_1' placeholder='1.'/>
