--- a/sections/section_1.2.html
+++ b/sections/section_1.2.html
@@ -34,8 +34,15 @@
 
             <form name="exercise_2" id='exercise_2'>
                 <table border="0">
-                    <label for="exercise_2"><center><b>Feared Situation</b>&nbsp;&nbsp;<b>Anxious Thoughts</b></center>
                     </label>
+                    <tr>
+                        <td>
+                            <center><b>Feared Situation</b></center>
+                        </td>
+                        <td>
+                            <center><b>Anxious Thoughts</b></center>
+                        </td>
+                    </tr>
                     <tr>
                         <td>
                             <input type='text' name='fear_1' id='fear_1' placeholder='1.'/>
