--- a/sections/section_2.html
+++ b/sections/section_2.html
@@ -69,6 +69,8 @@
                     <label for="checkbox-5">I should always be funny and charming.</label>
                 </fieldset>
             </div>
+
+            
             <h3>Postmortem: </h3> 
             <p>
                 When your mind rehashes or ruminates about what you think happened (or should have happened) in a social situation.The following is an example of a "postmortem" review that Jack engaged in after he gave a presentation at school:
@@ -108,7 +110,7 @@
                 See if you notice any trends. Does your mind tend to use the same type of thinking over and over, or does it prefer variety?
             </p>
 
-            <form name="exercise_2" id='exercise_2'>
+            <form name="exercise_4" id='exercise_4'>
                 <table border="0">
                     <tr>
                         <td>
@@ -129,7 +131,17 @@
                             <input type='text' name='thought_1'/>
                         </td>
                         <td>
-                            <input type='text' name='story_1'/>
+                            <div data-role="fieldcontain">
+                                <select name="select-choice-1" id="fear_type_1" data-native-menu="false">
+                                    <option value="standard"></option>
+                                    <option value="standard">Fortune-Telling</option>
+                                    <option value="rush">Mind Reading</option>
+                                    <option value="express">"Shoulding"</option>
+                                    <option value="overnight">Postmortem</option>
+                                    <option value="overnight">The Spotlight Effect</option>
+                                    <option value="overnight">Generating Stories</option>
+                                </select>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -139,6 +151,19 @@
                         <td>
                             <input type='text' name='thought_2'/>
                         </td>
+                        <td>
+                            <div data-role="fieldcontain">
+                                <select name="select-choice-1" id="fear_type_2" data-native-menu="false">
+                                    <option value="standard"></option>
+                                    <option value="standard">Fortune-Telling</option>
+                                    <option value="rush">Mind Reading</option>
+                                    <option value="express">"Shoulding"</option>
+                                    <option value="overnight">Postmortem</option>
+                                    <option value="overnight">The Spotlight Effect</option>
+                                    <option value="overnight">Generating Stories</option>
+                                </select>
+                            </div>
+                        </td>
                     </tr>
                     <tr>
                         <td>
@@ -146,6 +171,19 @@
                         </td>
                         <td>
                             <input type='text' name='thought_3'/>
+                        </td>
+                        <td>
+                            <div data-role="fieldcontain">
+                                <select name="select-choice-1" id="fear_type_3" data-native-menu="false">
+                                    <option value="standard"></option>
+                                    <option value="standard">Fortune-Telling</option>
+                                    <option value="rush">Mind Reading</option>
+                                    <option value="express">"Shoulding"</option>
+                                    <option value="overnight">Postmortem</option>
+                                    <option value="overnight">The Spotlight Effect</option>
+                                    <option value="overnight">Generating Stories</option>
+                                </select>
+                            </div>
                         </td>
                     </tr>
                 </table>
