--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
                     <h3>Section Two</h3>
                     <a href="sections/section_2.html">Types of Anxious Thinking</a>
                 </div>
+                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                    <h3>Section Two</h3>
+                    <a href="sections/section_3.html">s3</a>
+                </div>
+                                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                    <h3>Section Two</h3>
+                    <a href="sections/section_4.html">s4</a>
+                </div>
+                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                    <h3>Section Two</h3>
+                    <a href="sections/section_5.html">s5</a>
+                </div>
+                <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
+                    <h3>Section Two</h3>
+                    <a href="sections/section_6.html">s6</a>
+                </div>
 
                 <script> 
                     function clear_Storage() {
