--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -59,7 +59,7 @@
             </p>
 
             <form name="exercise_6" id='exercise_6'>
-                <table border="0" id='table_exercise_6'>
+                <table border="0" cellpadding='0' id='table_exercise_6'>
                     <tr>
                         <td>
                             <center><b>Thought</b></center>
@@ -79,7 +79,7 @@
                         </td>
                         <td>
                             <div data-role="fieldcontain">
-                                <select data-native-menu="false">
+                                <select data-native-menu="false" data-mini='true'>
                                     <option value="rush">Mind Reading</option>
                                 </select>
                             </div>
