--- a/sections/section_2.html
+++ b/sections/section_2.html
@@ -132,7 +132,7 @@
                         </td>
                         <td>
                             <div data-role="fieldcontain">
-                                <select name="select-choice-1" id="fear_type_1" data-native-menu="false">
+                                <select name="select-choice-1" id="fear_type_1" data-native-menu="false" data-mini='true'>
                                     <option value="standard"></option>
                                     <option value="standard">Fortune-Telling</option>
                                     <option value="rush">Mind Reading</option>
@@ -153,7 +153,7 @@
                         </td>
                         <td>
                             <div data-role="fieldcontain">
-                                <select name="select-choice-1" id="fear_type_2" data-native-menu="false">
+                                <select name="select-choice-1" id="fear_type_2" data-native-menu="false" data-mini='true'>
                                     <option value="standard"></option>
                                     <option value="standard">Fortune-Telling</option>
                                     <option value="rush">Mind Reading</option>
@@ -174,7 +174,7 @@
                         </td>
                         <td>
                             <div data-role="fieldcontain">
-                                <select name="select-choice-1" id="fear_type_3" data-native-menu="false">
+                                <select name="select-choice-1" id="fear_type_3" data-native-menu="false" data-mini='true'>
                                     <option value="standard"></option>
                                     <option value="standard">Fortune-Telling</option>
                                     <option value="rush">Mind Reading</option>
@@ -203,7 +203,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_1.2.html"onclick="submitExcerise_2();">Continue</a>
+                        <a href="section_3.html" onclick="">Continue</a>
                     </li>
                 </ul>
             </div>
