--- a/sections/section_3.html
+++ b/sections/section_3.html
@@ -144,7 +144,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_1.2.html"onclick="submitExcerise_2();">Continue</a>
+                        <a href="section_4.html"onclick="">Continue</a>
                     </li>
                 </ul>
             </div>
