--- a/sections/section_6.html
+++ b/sections/section_6.html
@@ -47,7 +47,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_1.2.html"onclick="submitExcerise_2();">Continue</a>
+                        <a href="#"onclick="" class="ui-btn-active ui-state-persist">Continue</a>
                     </li>
                 </ul>
             </div>
