--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
                     <a href="sections/section_2.html">Types of Anxious Thinking</a>
                 </div>
                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Two</h3>
+                    <h3>Section Three</h3>
                     <a href="sections/section_3.html">s3</a>
                 </div>
                                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Two</h3>
+                    <h3>Section Four</h3>
                     <a href="sections/section_4.html">s4</a>
                 </div>
                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Two</h3>
+                    <h3>Section Five</h3>
                     <a href="sections/section_5.html">s5</a>
                 </div>
                 <div data-role="collapsible" data-iconpos="right" data-collapsed-icon="arrow-r" data-theme="a" data-content-theme="a">
-                    <h3>Section Two</h3>
+                    <h3>Section Six</h3>
                     <a href="sections/section_6.html">s6</a>
                 </div>
 
