--- a/sections/section_4.html
+++ b/sections/section_4.html
@@ -98,7 +98,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="section_1.2.html"onclick="submitExcerise_2();">Continue</a>
+                        <a href="section_5.html"onclick="">Continue</a>
                     </li>
                 </ul>
             </div>
